# gppc-classic

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
include/: a_star.h  baseline.h  embedding.h  entry.h  fp_util.h  grid.h  jps.h  open_closed_list.h  search.h
lib/: CMakeLists.txt  gppc.h  path_validator.cpp  path_validator.h  scenario_loader.cpp  scenario_loader.h  timer.cpp  timer.h
script/: test.ps1  test.sh
src/: CMakeLists.txt  a_star.cpp  baseline.cpp  embedding.cpp  entry.cpp  grid.cpp  jps.cpp  main.cpp  run.cpp
test/: CMakeLists.txt  test_jps_embeddings.cpp  test_jps_octile.cpp  test_util.cpp  test_util.h
